--- a/main.css
+++ b/main.css
@@ -2,3 +2,56 @@ html {
 	color: #000;
 	background: #FFF
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font: helvetica,arial,sans-serif;
+}
+
+#ft {
+    height: 40px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 11px;
+    text-align: center;
+    color: #1d1da3;
+    padding-bottom: 40px;
+}
+
+ul {
+    font-family:  "helvetica neue",helvetica,arial,sans-serif;
+    font-style: normal;
+    font-variant-caps: normal;
+    font-weight: normal;
+    font-stretch: normal;
+    font-size: 13px;
+    line-height: 1.25;
+    
+    list-style: none;
+    list-style-position: outside;
+    list-style-image: none;
+    list-style-type: none;
+}
+
+li {
+    display: inline;
+    padding: 4px;
+}
+
+.updated {
+    color: #324FE1;
+    font-weight: bold;
+    font-size: 13px;
+    padding-left: 4px;
+}
+
+#yahoo-name {
+    color: #5f5f5f;
+    font-size: 13px;
+}
+
+.small-blue-words {
+    font-size: 11px;
+}
